--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@ body{
 .dividerContainer{
     margin-top: 80px;
 }
+
 .divider1{
     width: 100%;
     background-color: red;
@@ -25,23 +26,42 @@ body{
 }
 
 
-.App {
 
+.App {
 text-align: center;
 color: black;
-margin: 0 auto;
+margin: 0px auto;
 padding: 10px;
-max-width: 800px;
+width: 100%;
 
 }
 
-.navBar{
+.mobileMenu {
+    display: none;
+}
+
+.navBarBackground{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 20px;
+    padding: 20px 20px;
+}
 
+.cover{
+    background-color: rgb(0, 0, 0, 0.4);
+    width: 100%;
+    position: absolute;
+    height: 100%;
+    z-index: -1;
+    
+}
 
+.navBar{
+
+    background-color: #ffffff;
+    margin: 0;
+    padding: 0;
+    z-index: 10;
 }
 
 .navBar li{
@@ -56,25 +76,19 @@ max-width: 800px;
 
 }
 
-.navBar a{
-    color: black;
+.navBar  li a{
+    color: rgb(110, 16, 16);
     text-decoration: none;
-
-}
-
-.navBar li::after{
-    content: '';
-    width: 0%;
-    height: 5px;
-    background-color: red;
-    display: inline-block;
+    font-weight: 400;
+    transition: 0.3s;
     
+
 }
 
-.navBar li::after:hover{
-
-    width: 100%;
-
+.navBar li a:hover{
+    padding:4px 8px;
+    background-color: #b30404;
+    color: white;
 }
 
 
@@ -91,28 +105,35 @@ max-width: 800px;
 .logo p {
     padding: 0;
     margin: 0;
+    color: black;
+    font-weight: 800;
 }
 
 .headerContainer{
-    background-image: url('./Images/pizza.png');
+    position: relative;
+    background-image: url('./Images/pizzaWallpaper1.jpg');
     background-clip: border-box;
     background-size:cover;
     background-repeat:no-repeat;
     height: fit-content;
     width: 100%;
-    border-radius: 8px;
-    box-shadow: 2px 2px 20px #727272;
+    padding:100px 0px;
+
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin-top: 100px;
+    z-index: 0;
+
 }
 
 .headerContainer h2{
-    color: rgb(255, 255, 255);
-    font-size: 50px;
+    color: rgb(248, 248, 248);
+    font-size: 80px;
     font-weight: 900;
+    text-shadow: 2px 2px 20px rgb(0, 0, 0, 0.5);
+    -webkit-text-stroke: 2px #b30404;
+
     
 }
 .headerContainer h1{
@@ -143,21 +164,7 @@ max-width: 800px;
     font-size: 12px;
     margin-top: 10px;
 }
-.header-right p{
-    font-family: 'Roboto', sans-serif;
-    font-size: 50px;
-    padding: 10px 20px;
-    font-weight: bold;
-    color: white;
 
-}
-
-.header-right{
-    width: fit-content;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 span{
     display: block;
 }
@@ -255,6 +262,16 @@ hr{
 
 }
 
+.card{
+    cursor: pointer;
+    box-shadow: 2px 2px 20px rgb(0, 0, 0, 0.2);
+    transition: 0.3s;
+}
+
+.card:hover{
+    transform: scale(1.1);
+}
+
 .searchFormContainer{
     max-width: 300px;
     margin: 100px auto;
@@ -279,7 +296,7 @@ form p {
 }
 
 .vegPizzaContainer{
-    margin-top: 40px;
+    margin-top: 100px;
 }
 .vegLinkContainer{
     display: flex;
@@ -315,9 +332,6 @@ form p {
     gap: 20px;
 }
 
-.card{
-    width: fit-content;
-}
 
 .card img{
     width: 200px;
@@ -331,7 +345,7 @@ form p {
     gap: 20px;
 }
 
-.popularPizzas h2{
+h2{
     text-align: left;
     font-size: 40px;
     font-weight: 900;
@@ -339,12 +353,28 @@ form p {
 
 }
 
-.dessertContainer {
+.dessertContainer .card {
     display: flex;
     flex-wrap: wrap;
-    width: 100%;
+    align-items: center;
+    justify-content: left;
     gap: 20px;
+    width: 200px;
     transition: 0.3s;
+}
+
+.dessertContainer{
+    display: flex;
+    justify-content: left;
+    flex-wrap: wrap;
+    width: fit-content;
+    gap: 20px;
+
+}
+
+.dessertCards{
+    display: flex;
+    
 }
 
 .dessertCards .card p:nth-child(2){
@@ -432,6 +462,7 @@ footer{
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
 }
 
 .showMoreBtn{
@@ -441,6 +472,82 @@ footer{
     margin: 0px auto;
     background-color: #fff;
 }
+
+.homeContainer{
+    padding: 0;
+    width: 100%;
+}
+
+
+.adminContainer{
+    height: 50vh;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.adminContainer h2{
+    margin: 10px;
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    max-width: 500px;
+    margin: 40px auto;
+}
+
+.form-control{
+    border: 1px solid #acacac;
+}
+
+.addProductContainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: fit-content;
+    width: 100%;
+}
+
+.addProductContainer h2{
+    text-align: left;
+    margin: 40px 0px;
+}
+
+.pizzaTableContainer{
+    width: 100%;
+    margin: 100px auto;
+}
+
+table{
+    width: 100%;
+    margin: auto;
+    gap: 40px;
+}
+table thead tr th{
+    text-align: center;
+    margin: auto;
+    text-align: center;
+    background-color: #e26262;
+    color: white;
+    padding: 10px;
+}
+
+table tbody tr td{
+    font-size: 14px;
+}
+table tr td{
+    border: #b4b4b4 solid 1px;
+}
+
+table tr td:hover{
+    background-color: yellow;
+}
+
 
 
 
@@ -453,4 +560,127 @@ footer{
         transform: translateX(0px);
     }
     
+}
+
+@keyframes openMobileMenu {
+
+    0% {
+        transform: translateX(-400px);
+    }
+    100%{
+        transform: translateX(0px);
+    }
+    
+}
+
+
+@media screen and (max-width: 576px) {
+
+    .App{
+        position: relative;
+    }
+    
+
+    .hamburgerMenuContainer{
+        position: absolute;
+        visibility: visible;
+        top: 0px;
+        right: 20px;
+    }
+
+    .mobileMenu.active{
+        background-color: rgb(136, 11, 11);
+        width: 100%;
+        height: fit-content;
+        padding: 40px 0px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        animation: openMobileMenu 0.5s  ;
+    }
+
+    .mobileMenu{
+        animation: closeMobileMenu 1s  ;
+      
+    
+    }
+
+    .mobileMenu ul {
+        padding: 0;
+        gap: 20px;
+    }
+    .mobileMenu ul li a {
+        text-decoration: none;
+        color: white;
+    }
+    .mobileMenu li {
+        margin-top: 20px;
+    }
+    
+    .box1 , .box2 , .box3{
+        width: 50px;
+        height: 4px;
+        background-color: black;
+        margin-top: 10px;
+        border-radius: 8px;
+        transition: 0.3s;
+    }
+
+    .box2.active{
+        visibility: hidden;
+        opacity: 0;
+    }
+
+    .box1.active{
+        transform: rotate(45deg);
+        position: absolute;
+        top: 10px;
+        left:10;
+    }
+    .box3.active{
+        transform: rotate(-45deg);
+        position: absolute;
+        top: 10px;
+        left:10;
+    }
+
+
+    .header-left {
+        justify-content: center;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+    }
+
+
+    .navBar {
+        visibility: hidden;
+    }
+
+    h2{
+        text-align: center;
+    }
+
+    .vegLinkContainer h2{
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+    .vegPizzaContainer{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+    }
+    .dessertContainer , .vegContainer , .popularCards{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        row-gap: 20px;
+        text-align: center;
+    }
+
+
 }
